  - Improve Rest Plugin with recoverable error.

  v.1.7.0:
  - Add support for local blueprint archive

  v.1.7.1:
  - Fix bug introduced in 1.7.0 when blueprint archive is null.
  - Changed the logic for external_resource in Blueprint and Deployment.
    New Logic Is:
    - external_resource is True and resource exists: finish
    - external_resource is True and resource does not exist: fail
    - external_resource is False and resource exists: warn
    - external_resource is False and resource does not exist: create
  - Fix call sequence in backup workflow.

  v1.7.2:
  - Rest Plugin Improvements
  - Update tests to use cirleci v2 and to use ecosystem test tools
  - added integration tests for key, file, cloudinit, deployment proxy,
    and rest tools.

  v1.7.3:
  - Examples for use terminal plugin in relationships

  v1.8.0:
  - Add scale several scaling group in one transaction

  v1.8.1:
  - Scalelist Down: Additional examples for remove instances created by install
    workflow.

  v1.8.2:
  - Scalelist Down: Additional examples for remove instances by property value
    without transaction id.

  v1.8.3:
  - Scalelist Down: Additional example for update workflow

  v1.9.0:
  - Scalelist Down: Support deep check property value
  - Deployment Proxy: Install plugins and set secrets with create deployment.

  v1.9.1:
  - Deployment Proxy: Fix issue with deployment outputs when adding nodes derived from deployment proxy node

  v1.9.2:
  - Scalelist Up: Fix issue with scaledown on rollback
  - Terminal Plugin: Show current messages as debug logs.

  v1.9.3:
  - Raise NonRecoverableError exception on failed proxy executions.
  - Increase default execution timeout to 1800 seconds.

  v1.9.4:
  - Deployment proxy: Ignore proxy deployment uninstall errors unless user specifies otherwise.

  v1.9.5:
  - Deployment proxy: Using pagination in executions list.

  v1.9.6:
  - Scalelist: Add `ignore_rollback_failure` parameter for ignore action failures on rollback.