@@ -162,7 +162,12 @@ def _get_transaction_instances(ctx, scale_transaction_field,
     return node_instances, instance_ids
 
 
-def _get_scale_list(ctx, scalable_entity_properties):
+def _get_scale_list(ctx, scalable_entity_properties, property_type):
+    # scalable_entity_properties - dictionary with such structure:
+    # {
+    #   node_name: [{runtime_properties}]
+    # }
+    # property_type - kind of values inside list of node names(types).
     scalable_entity_dict = {}
     scaling_groups = ctx.deployment.scaling_groups
     groups = _deployments_get_groups(ctx)
@@ -183,6 +188,11 @@ def _get_scale_list(ctx, scalable_entity_properties):
             raise ValueError(
                 "You use wrong value for 'scalable_entity_properties' item: {}"
                 .format(repr(scalable_entity_properties[node_name])))
+        for el in scalable_entity_properties[node_name]:
+            if not isinstance(el, property_type):
+                raise ValueError(
+                    "You use wrong value for runtime properties item: {}"
+                    .format(repr(scalable_entity_properties[node_name])))
         # get parent group
         for scalegroup in groups:
             # check that we really have such scalling group
@@ -420,8 +430,9 @@ def scaledownlist(ctx, scale_compute=False,
         ctx.logger.info("Empty list for instances for remove.")
         return
 
+    # we have list of instances_id(string) as part of scale dictionary
     scale_settings = _scaledown_group_to_settings(
-        ctx, _get_scale_list(ctx, instances), scale_compute)
+        ctx, _get_scale_list(ctx, instances, basestring), scale_compute)
 
     try:
         _run_scale_settings(ctx, scale_settings, {},
@@ -490,8 +501,11 @@ def scaleuplist(ctx, scalable_entity_properties,
     if not scalable_entity_properties:
         raise ValueError('Empty list of scale nodes')
 
+    # we have list of dictionaries with runtime properties for new instances as
+    # part of scale dictionary
     scale_settings = _scaleup_group_to_settings(
-        ctx, _get_scale_list(ctx, scalable_entity_properties), scale_compute)
+        ctx, _get_scale_list(ctx, scalable_entity_properties, dict),
+        scale_compute)
 
     _run_scale_settings(ctx, scale_settings, scalable_entity_properties,
                         scale_transaction_field, scale_transaction_value,
