@@ -155,3 +155,4 @@ releases:
 
   v1.9.6:
   - Scalelist: Add `ignore_rollback_failure` parameter for ignore action failures on rollback.
+  - Scalelist: More strict validation for parameters in scalelist up.
